APP-624 add saml support

--- a/src/components/application/appsco-application-actions.html
+++ b/src/components/application/appsco-application-actions.html
@@ -402,6 +402,17 @@ Custom property | Description | Default
                 }
             },
 
+            attached: function () {
+                if(this.company) {
+                    this.unshift('_actionList', {
+                        value: 'sso-application',
+                        name: 'SSO Application',
+                        icon: 'icons:apps',
+                        tpl: ''
+                    });
+                }
+            },
+
             behaviors: [
                 Polymer.NeonAnimationRunnerBehavior
             ],
@@ -461,7 +472,6 @@ Custom property | Description | Default
             },
 
             _onAddItemActionSelect: function(event) {
-
                 this.fire('add-item-action', {
                     action: event.detail.item.value,
                     applicationTemplate: event.detail.item.tpl
