DASH-2441 added claims on resource add dialogs

--- a/src/components/application/company/appsco-company-application-add-settings.html
+++ b/src/components/application/company/appsco-company-application-add-settings.html
@@ -5,6 +5,7 @@
 <link rel="import" href="../../../../bower_components/iron-ajax/iron-request.html">
 <link rel="import" href="../../../../bower_components/iron-form/iron-form.html">
 <link rel="import" href="../../../../bower_components/paper-input/paper-input.html">
+<link rel="import" href="../../../../bower_components/paper-toggle-button/paper-toggle-button.html">
 <link rel="import" href="../../../../bower_components/neon-animation/neon-shared-element-animatable-behavior.html">
 <link rel="import" href="../../../../bower_components/neon-animation/animations/hero-animation.html">
 <link rel="import" href="../../../../bower_components/neon-animation/animations/fade-in-animation.html">
@@ -12,6 +13,17 @@
 
 <link rel="import" href="../../components/appsco-form-error.html">
 <link rel="import" href="../appsco-application-info.html">
+
+<link rel="import" href="../appsco-application-form-item.html">
+<link rel="import" href="../appsco-application-form-unpw.html">
+<link rel="import" href="../appsco-application-form-cc.html">
+<link rel="import" href="../appsco-application-form-login.html">
+<link rel="import" href="../appsco-application-form-passport.html">
+<link rel="import" href="../appsco-application-form-securenote.html">
+<link rel="import" href="../appsco-application-form-softwarelicence.html">
+<link rel="import" href="../appsco-application-form-saml.html">
+<link rel="import" href="../appsco-application-form-saml-dropbox.html">
+<link rel="import" href="../appsco-application-form-saml-office-365.html">
 
 <!--
 `appsco-company-application-add-settings`
@@ -47,7 +59,6 @@ Custom property | Description | Default
              };
             }
         </style>
-
         <div id="applicationHeader">
             <template is="dom-if" if="[[ !application.custom_application ]]">
                 <appsco-application-info application="[[ application ]]"></appsco-application-info>
@@ -90,8 +101,131 @@ Custom property | Description | Default
                         name="configure_application[url]"
                         hidden$="[[ !_shouldShowUrl ]]"
                         ></paper-input>
+
             </form>
 
+        </div>
+        <div class="claims-container">
+            <template is="dom-if" if="[[ _claimsAvailable ]]">
+                <paper-toggle-button
+                        checked$="[[ _claimTypeIndividual ]]"
+                        on-change="_onChangeClaimType"
+                        on
+                        id="claimTypeBtn"
+                >Set individually</paper-toggle-button>
+            </template>
+
+            <template is="dom-if" if="[[ _claimTypeIndividual ]]">
+                <div class="info">
+                    <p>Every employee sets its own configuration.</p>
+                    <p>Disable it in order to manage resource configuration for all employees.</p>
+                </div>
+            </template>
+
+            <template is="dom-if" if="[[ !_claimTypeIndividual ]]">
+                <template is="dom-if" if="[[ _unPwAuthType ]]"
+                          restamp
+                          on-dom-change="_onAuthTypeChanged">
+                    <appsco-application-form-unpw
+                            data-claims
+                            claims-name-prefix="application_claims[claims]"
+                            claims="[[ resource.claims ]]"
+                    ></appsco-application-form-unpw>
+                </template>
+
+                <template is="dom-if" if="[[ _itemAuthType ]]"
+                          restamp
+                          on-dom-change="_onAuthTypeChanged">
+                    <appsco-application-form-item
+                            data-claims
+                            claims-name-prefix="application_claims[claims]"
+                            claims="[[ resource.claims ]]"
+                    ></appsco-application-form-item>
+                </template>
+
+                <template is="dom-if" if="[[ _creditCardAuthType ]]"
+                          restamp
+                          on-dom-change="_onAuthTypeChanged">
+                    <appsco-application-form-cc
+                            data-claims
+                            claims-name-prefix="application_claims[claims]"
+                            claims="[[ resource.claims ]]"
+                    ></appsco-application-form-cc>
+                </template>
+
+                <template is="dom-if" if="[[ _loginAuthType ]]"
+                          restamp
+                          on-dom-change="_onAuthTypeChanged">
+                    <appsco-application-form-login
+                            data-claims
+                            claims-name-prefix="application_claims[claims]"
+                            claims="[[ resource.claims ]]"
+                    ></appsco-application-form-login>
+                </template>
+
+                <template is="dom-if" if="[[ _passportAuthType ]]"
+                          restamp
+                          on-dom-change="_onAuthTypeChanged">
+                    <appsco-application-form-passport
+                            data-claims
+                            claims-name-prefix="application_claims[claims]"
+                            claims="[[ resource.claims ]]"
+                    ></appsco-application-form-passport>
+                </template>
+
+                <template is="dom-if" if="[[ _secureNoteAuthType ]]"
+                          restamp
+                          on-dom-change="_onAuthTypeChanged">
+                    <appsco-application-form-securenote
+                            data-claims
+                            claims-name-prefix="application_claims[claims]"
+                            claims="[[ resource.claims ]]"
+                    ></appsco-application-form-securenote>
+                </template>
+
+                <template is="dom-if" if="[[ _softwareLicenceAuthType ]]"
+                          restamp
+                          on-dom-change="_onAuthTypeChanged">
+                    <appsco-application-form-softwarelicence
+                            data-claims
+                            claims-name-prefix="application_claims[claims]"
+                            claims="[[ resource.claims ]]"
+                    ></appsco-application-form-softwarelicence>
+                </template>
+
+                <template is="dom-if" if="[[ _samlAuthType ]]"
+                          restamp
+                          on-dom-change="_onAuthTypeChanged">
+                    <appsco-application-form-saml
+                            data-claims
+                            claims-name-prefix="application_claims[claims]"
+                            claims="[[ resource.claims ]]"
+                            domain="[[ domain ]]"
+                    ></appsco-application-form-saml>
+                </template>
+
+                <template is="dom-if" if="[[ _samlDropBoxAuthType ]]"
+                          restamp
+                          on-dom-change="_onAuthTypeChanged">
+                    <appsco-application-form-saml-dropbox
+                            data-claims
+                            claims-name-prefix="application_claims[claims]"
+                            claims="[[ resource.claims ]]"
+                            domain="[[ domain ]]"
+                    ></appsco-application-form-saml-dropbox>
+                </template>
+
+                <template is="dom-if" if="[[ _samlOffice365AuthType ]]"
+                          restamp
+                          on-dom-change="_onAuthTypeChanged">
+                    <appsco-application-form-saml-office-365
+                            data-claims
+                            claims-name-prefix="application_claims[claims]"
+                            claims="[[ resource.claims ]]"
+                            domain="[[ domain ]]"
+                    ></appsco-application-form-saml-office-365>
+                </template>
+            </template>
         </div>
     </template>
 
@@ -102,12 +236,28 @@ Custom property | Description | Default
 
             properties: {
 
+                _action: {
+                    type: String,
+                    value: function () { return ''; },
+                    observer: '_onActionChanged'
+                },
+
                 /**
                  * Application to add.
                  */
                 application: {
                     type: Object,
                     notify: true
+                },
+
+                _claimTypeIndividual: {
+                    type: Boolean,
+                    value: false,
+                    observer: '_onClaimTypeChanged'
+                },
+
+                _claimsAvailable: {
+                    type: Boolean
                 },
 
                 /**
@@ -190,6 +340,58 @@ Custom property | Description | Default
                             'hero': this.$.applicationHeader
                         }
                     }
+                },
+
+                _itemAuthType: {
+                    type: Boolean,
+                    computed: '_computeAuthType(_action, "catalogue-application")'
+                },
+
+                _creditCardAuthType: {
+                    type: Boolean,
+                    computed: '_computeAuthType(_action, "credit-card")'
+                },
+
+                _loginAuthType: {
+                    type: Boolean,
+                    computed: '_computeAuthType(_action, "login")'
+                },
+
+                _passportAuthType: {
+                    type: Boolean,
+                    computed: '_computeAuthType(_action, "passport")'
+                },
+
+                _secureNoteAuthType: {
+                    type: Boolean,
+                    computed: '_computeAuthType(_action, "secure-note")'
+                },
+
+                _softwareLicenceAuthType: {
+                    type: Boolean,
+                    computed: '_computeAuthType(_action, "software-licence")'
+                },
+
+                _samlAuthType: {
+                    type: Boolean,
+                    computed: '_computeSAMLAuthType(application, _action, "saml")'
+                },
+
+                _samlDropBoxAuthType: {
+                    type: Boolean,
+                    computed: "_computeSAMLAuthType(application, _action, 'saml_dropbox')"
+                },
+
+                _samlOffice365AuthType: {
+                    type: Boolean,
+                    computed: "_computeSAMLAuthType(application, _action, 'saml_office_365')"
+                },
+
+                _resourceClaimsActiveForm: {
+                    type: Object,
+                    value: function() {
+                        return {};
+                    }
                 }
             },
 
@@ -199,6 +401,68 @@ Custom property | Description | Default
 
             listeners: {
                 'application-changed': '_onApplicationChanged'
+            },
+
+            _onAuthTypeChanged: function() {
+                this.set('_resourceClaimsActiveForm', Polymer.dom(this.root).querySelector('[data-claims]'));
+            },
+
+            _computeAuthType: function (action, authType) {
+                return action === authType;
+            },
+
+            _computeSAMLAuthType: function (application, _action, authType) {
+                if(_action !== 'sso-application') {
+                    return false;
+                }
+
+                for(type in application.auth_types) {
+                    if (type === authType) {
+                        return true;
+                    }
+                }
+
+                return false;
+            },
+
+            _claimsAvailableCompute: function (action) {
+                this._claimsAvailable = action !== 'sso-application';
+            },
+
+            setAction: function (action) {
+                this._action = action;
+            },
+
+            _onActionChanged: function () {
+                this._claimsAvailableCompute(this._action)
+            },
+
+            _onClaimTypeChanged: function(individual) {
+                individual ? this._hideClaimsForm() : this._showClaimsForm();
+            },
+
+            _showClaimsForm: function() {
+
+                if (this._resourceClaimsForm) {
+                    this._resourceClaimsForm.style.display = 'block';
+//                    this.playAnimation('entry');
+                }
+            },
+
+            _hideClaimsForm: function() {
+                this._resetClaimsForm();
+//                this.playAnimation('exit');
+            },
+
+            _resetClaimsForm: function() {
+
+//                if (this._resourceClaimsForm) {
+//                    this._resourceClaimsForm.reset();
+//                }
+            },
+
+            _onChangeClaimType: function() {
+                this._claimTypeIndividual = !this._claimTypeIndividual;
             },
 
             _computeShouldShowUrl: function (application) {
@@ -273,6 +537,25 @@ Custom property | Description | Default
 
                         if (application) {
                             this.application = application;
+                        }
+                        var claimsUri = application.meta.update_claims;
+                        var body = this._resourceClaimsActiveForm.encodedBodyValues();
+                        if('' !== body) {
+                            var options = {
+                                url: claimsUri,
+                                method: 'PATCH',
+                                body: body,
+                                handleAs: 'json',
+                                headers: this._headers
+                            };
+
+                            var request = document.createElement('iron-request');
+                            request.send(options).then(function () {
+
+                                if (request.succeeded) {
+                                }
+
+                            });
                         }
 
                         this._onApplicationAdded();
@@ -355,6 +638,11 @@ Custom property | Description | Default
              * Submits form which adds application as item.
              */
             addApplication: function() {
+
+                if(false === this._resourceClaimsActiveForm.isValid()) {
+                    this.fire('form-error');
+                    return;
+                }
 
                 if (this.$.saveApplicationForm.validate()) {
                     this.$.addApplicationForm.submit();
